--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <h2>TEST</h2>
+    <h2>TEST-TEST</h2>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
   </body>
