add class + sass

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <h2>TEST-TEST</h2>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/cardsFilm.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
