--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Filmoteka</title>
+  <title id="pageId">Filmoteka</title>
   <link rel="stylesheet" href="./sass/index.scss" />
   <script type="module" src="./index.js"></script>
   <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
