--- a/src/library.html
+++ b/src/library.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title id="pageId">My library</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
 </head>
@@ -12,6 +12,7 @@
 <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header_librari.html"></include>
+    <include src="./partials/libraryFilms.html"></include>
     <include src="./partials/footer.html"></include>
 </body>
 
