--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 
   <!-- ❗️❗️❗️ Add partials like so for every page -->
   <include src="./partials/header.html"></include>
+    <include src="./partials/backstage.html"></include>
   <include src="./partials/cardsFilm.html"></include>
+  <!-- <include src="./partials/backstage.html"></include> -->
   <include src="./partials/footer.html"></include>
 </body>
 
