--- a/src/library.html
+++ b/src/library.html
@@ -11,7 +11,9 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header_librari.html"></include>
+    <include src="./partials/backstage.html"></include>
     <include src="./partials/libraryFilms.html"></include>
+    <!-- <include src="./partials/backstage.html"></include> -->
     <include src="./partials/footer.html"></include>
   </body>
 </html>
