--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <!-- ❗️❗️❗️ Add partials like so for every page -->
+  <!-- ❗️❗️❗️ Add partials like so for every page. -->
   <include src="./partials/backstage.html"></include>
   <include src="./partials/header.html"></include>
   <include src="./partials/cardsFilm.html"></include>
